# SE3-VLA

./: .gitignore  README.md  pyproject.toml
experiments/: results.json
experiments/metaworld/: benchmark.py  benchmark_numpy.py
paper/: paper_draft.md
se3_vla/: __init__.py
se3_vla/action_heads/: __init__.py  geoact.py
se3_vla/manifold/: __init__.py  se3.py
se3_vla/models/: __init__.py  se3_vla.py
se3_vla/uncertainty/: __init__.py  flow_conformal.py
se3_vla/utils/: __init__.py
tests/: test_manifold.py
