[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "se3-vla"
version = "0.1.0"
description = "SE(3)-Native VLA Action Prediction with Uncertainty"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
metaworld = ["metaworld"]

[tool.setuptools.packages.find]
include = ["se3_vla*"]
